--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -60,7 +60,7 @@
                 <Setter Property="Margin" Value="-3,-2,-2,-2"/>
             </Style>
 
-            <!--Styling for the "important" buttons like add task, add DB, etc.-->
+            <!--Styling for the "important" buttons -->
             <Style x:Key="ImportantButtonStyle" TargetType="Button">
                 <Setter Property="BorderThickness" Value="0"/>
                 <Setter Property="Width" Value="200"/>
@@ -84,7 +84,7 @@
                 <Setter Property="Margin" Value="10,5,0,0"/>
             </Style>
 
-            <!--Styling for the "main" text in the About + Help pages-->
+            <!--Styling for the "main" text in the About page-->
             <Style x:Key="TextBlockStyle" TargetType="TextBlock">
                 <Setter Property="Foreground" Value="{StaticResource TextColor1}"/>
                 <Setter Property="FontSize" Value="13"/>
@@ -92,39 +92,7 @@
                 <Setter Property="Margin" Value="15,0,10,0"/>
             </Style>
 
-            <!--Styling for the context menu to add tasks-->
-            <Style x:Key="ContextMenuStyle" TargetType="ContextMenu">
-                <Setter Property="Background" Value="{StaticResource BackgroundColor}"/>
-                <Setter Property="Foreground" Value="{StaticResource TextColor1}"/>
-                <Setter Property="OverridesDefaultStyle" Value="True" />
-                <Setter Property="SnapsToDevicePixels" Value="True" />
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type ContextMenu}">
-                            <Border BorderThickness="1" BorderBrush="{StaticResource BorderColor}" x:Name="Border" 
-                                    Background="{StaticResource BackgroundColor}">
-                                <StackPanel ClipToBounds="True" Orientation="Vertical" IsItemsHost="True" />
-                            </Border>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsMouseOver" Value="true">
-                                    <Setter TargetName="Border" Property="Background" Value="{StaticResource BackgroundColor}" />
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-
-
-            <!--Defines the context menu when a result file is right-clicked-->
-            <ContextMenu x:Key="ResultContextMenu" Style="{StaticResource ContextMenuStyle}">
-                <MenuItem Header="Open file" Click="OpenFile_Click"/>
-                <MenuItem Header="Open containing folder" Click="OpenContainingFolder_Click" />
-                <MenuItem Header="Delete" Click="Delete_Click" />
-                <MenuItem Header="Delete all" Click="DeleteAll_Click" />
-            </ContextMenu>
-
-            <!--Styling for the datagrids that store spectra/databases-->
+            <!--Styling for the datagrids that store results-->
             <Style x:Key="x:DataGridStyle" TargetType="DataGrid">
                 <Setter Property="Foreground" Value="{StaticResource TextColor1}"/>
                 <Setter Property="Background" Value="{StaticResource DataGridBackgroundColor}"/>
