--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -68,6 +68,13 @@
                 <Setter Property="Foreground" Value="{StaticResource TextColor2}"/>
                 <Setter Property="FontSize" Value="12"/>
             </Style>
+            <Style x:Key="LessImportantButtonStyle" TargetType="Button">
+                <Setter Property="BorderThickness" Value="0"/>
+                <Setter Property="Width" Value="75"/>
+                <Setter Property="Background" Value="{StaticResource AccentColor}"/>
+                <Setter Property="Foreground" Value="{StaticResource TextColor2}"/>
+                <Setter Property="FontSize" Value="12"/>
+            </Style>
 
             <!--Styling for borders-->
             <Style x:Key="x:BorderStyle" TargetType="Border">
@@ -209,7 +216,7 @@ spectrum match (PrSM) and outputs a summary for all identifications.
                     <Grid.RowDefinitions>
                           <RowDefinition Height="50"/>
                         <RowDefinition Height="70"/>
-                        <RowDefinition Height="70"/>
+                        <RowDefinition Height="100"/>
                         <RowDefinition Height="25"/>
                         <RowDefinition Height="70"/>
                         <RowDefinition Height="25"/>
@@ -239,6 +246,7 @@ spectrum match (PrSM) and outputs a summary for all identifications.
                             </Grid.ColumnDefinitions>
 
                             <Grid.RowDefinitions>
+                                <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
@@ -282,6 +290,23 @@ spectrum match (PrSM) and outputs a summary for all identifications.
                                     </RadioButton.ToolTip>
                                 </RadioButton>
                             </StackPanel>
+                            <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="0">
+                                <TextBlock Style="{StaticResource TextBlockStyle}" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="500">
+                        Input contains a header:
+                                    <TextBlock.ToolTip>
+                                        <TextBlock>
+                                        Check the box if the input files contain a header row. Uncheck if they don't.
+                                        </TextBlock>
+                                    </TextBlock.ToolTip>
+                                </TextBlock>
+                                <CheckBox x:Name="HeaderCheckBoxv" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="500">
+                                    <CheckBox.ToolTip>
+                                        <TextBlock>
+                                        Check the box if the input files contain a header row. Uncheck if they don't.
+                                        </TextBlock>
+                                    </CheckBox.ToolTip>
+                                </CheckBox>
+                            </StackPanel>
                             <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
                                 <TextBlock Style="{StaticResource TextBlockStyle}" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="500">
                         Proteoform and Gene Delimiter:
@@ -310,9 +335,13 @@ spectrum match (PrSM) and outputs a summary for all identifications.
                         </Grid>
                     </StackPanel>
 
-                    <!--Button to add the result file-->
-                    <Button Name="AddValidationResults" Grid.Row="3" Content="+ADD VALIDATION RESULTS" Click="AddValidationResults_Click" HorizontalAlignment="Right" 
+                    <!--Buttons to add/clear the result file-->
+                    <StackPanel Orientation="Horizontal" Grid.Row="3" HorizontalAlignment="Right">
+                        <Button Name="AddValidationResults"  Content="ADD VALIDATION RESULTS" Click="AddValidationResults_Click" HorizontalAlignment="Right" 
                             Style="{StaticResource ImportantButtonStyle}" Margin="0,0,10,0"/>
+                        <Button Name="ClearValidationResults" Content="CLEAR" Click="ClearValidationResults_Click" HorizontalAlignment="Right" 
+                            Style="{StaticResource LessImportantButtonStyle}" Margin="0,0,10,0"/>
+                    </StackPanel>
 
                     <!--The result file info-->
                     <DataGrid Name="dataGridValidationResults" Grid.Row="4" ItemsSource="{Binding}" Style="{StaticResource x:DataGridStyle}"
@@ -334,10 +363,11 @@ spectrum match (PrSM) and outputs a summary for all identifications.
                     <Grid.RowDefinitions>
                         <RowDefinition Height="50"/>
                         <RowDefinition Height="70"/>
-                        <RowDefinition Height="70"/>
+                        <RowDefinition Height="100"/>
                         <RowDefinition Height="25"/>
                         <RowDefinition Height="1*"/>
                         <RowDefinition Height="25"/>
+                        <RowDefinition Height="5"/>
                     </Grid.RowDefinitions>
 
                     <!--Header label-->
@@ -361,6 +391,7 @@ spectrum match (PrSM) and outputs a summary for all identifications.
                             </Grid.ColumnDefinitions>
 
                             <Grid.RowDefinitions>
+                                <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
                                 <RowDefinition Height="1*"/>
@@ -403,6 +434,23 @@ spectrum match (PrSM) and outputs a summary for all identifications.
                                         </TextBlock>
                                     </RadioButton.ToolTip>
                                 </RadioButton>
+                            </StackPanel>
+                            <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="0">
+                                <TextBlock Style="{StaticResource TextBlockStyle}" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="500">
+                        Input contains a header:
+                                    <TextBlock.ToolTip>
+                                        <TextBlock>
+                                        Check the box if the input files contain a header row. Uncheck if they don't.
+                                        </TextBlock>
+                                    </TextBlock.ToolTip>
+                                </TextBlock>
+                                <CheckBox x:Name="HeaderCheckBox" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="500">
+                                    <CheckBox.ToolTip>
+                                        <TextBlock>
+                                        Check the box if the input files contain a header row. Uncheck if they don't.
+                                        </TextBlock>
+                                    </CheckBox.ToolTip>
+                                </CheckBox>
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" Grid.Row="1" Grid.Column="1">
                                 <TextBlock Style="{StaticResource TextBlockStyle}" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="500">
@@ -463,9 +511,13 @@ spectrum match (PrSM) and outputs a summary for all identifications.
 
                         </Grid>
                     </StackPanel>
-                    <!--Button to add the result file-->
-                    <Button Name="AddProteoformResults" Grid.Row="3" Content="+ADD PROTEOFORM RESULTS" Click="AddProteoformResults_Click" HorizontalAlignment="Right" 
+                    <!--Buttons to add/clear the result file-->
+                    <StackPanel Orientation="Horizontal" Grid.Row="3" HorizontalAlignment="Right">
+                        <Button Name="AddProteoformResults"  Content="ADD PROTEOFORM RESULTS" Click="AddProteoformResults_Click" HorizontalAlignment="Right" 
                             Style="{StaticResource ImportantButtonStyle}" Margin="0,0,10,0"/>
+                        <Button Name="ClearProteoformResults" Content="CLEAR" Click="ClearProteoformResults_Click" HorizontalAlignment="Right" 
+                            Style="{StaticResource LessImportantButtonStyle}" Margin="0,0,10,0"/>
+                    </StackPanel>
 
                     <!--The result file info-->
                     <DataGrid Name="dataGridProteoformResults" Grid.Row="4" ItemsSource="{Binding}" Style="{StaticResource x:DataGridStyle}"
