--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -177,17 +177,25 @@
                         <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
                         If the output is not transparent, then this program is unable to accurately classify proteoform identifications.  
                         <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
-                        To validate your software output, use your proteoform identification software to analyze the prepared .mzML 
+                        To validate your software output, use your proteoform identification software to analyze 
+                        <Hyperlink NavigateUri="https://github.com/smith-chem-wisc/ProteoformClassifier/tree/main/Test/ValidationFiles" RequestNavigate="Hyperlink_RequestNavigate">              
+                        the prepared .mzML
+                        </Hyperlink> 
                         <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
-(Validation.mzML) and .fasta (Validation.fasta). Convert the output to a three-column .tsv with columns of
+<Hyperlink NavigateUri="https://github.com/smith-chem-wisc/ProteoformClassifier/tree/main/Test/ValidationFiles" RequestNavigate="Hyperlink_RequestNavigate">                               
+                        (Validation.mzML) and .fasta (Validation.fasta).
+                        </Hyperlink>  
+                        Convert your proteoform results into a three-column .tsv with  
                         <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
-                        scan numbers, proteoform sequences, and genes. Separate multiple items within a single column with '|'.
+                        columns of scan numbers, proteoform sequences, and genes. Separate multiple items within a single column with '|'.
+                        <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
+                            You can then analyze this .tsv with ProteoformClassifier.
                         <LineBreak />
                         
                         <LineBreak /> <TabItem Visibility="Hidden"/> 
-                        ● <Bold FontWeight="UltraBold">Classify PrSMs:</Bold> <TabItem Visibility="Hidden"/>Classify your proteoform identifications. This program assigns an identification level for each proteoform-                    
+                        ● <Bold FontWeight="UltraBold">Classify PrSMs:</Bold> <TabItem Visibility="Hidden"/>Classify your proteoform identifications. This program assigns a classification level for each proteoform-spectrum                  
                         <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
-spectrum match (PrSM) and outputs a summary for all identifications.
+ match (PrSM) and outputs a summary for all identifications. The input file for classification is similar to validation.
                         <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
                         
                         <LineBreak />
@@ -233,7 +241,8 @@ spectrum match (PrSM) and outputs a summary for all identifications.
                             test files
                         </Hyperlink> with your proteoform identification software. 
                         Prepare the results from your software as a .tsv containing three columns: 
-                        1) the scan number of the PrSM, 2) the proteoform sequence(s) identified for that scan, and 3) the gene(s) of origin corresponding to those sequence(s).
+                        1) the scan number of the PrSM, 2) the proteoform sequence(s) identified for that scan, and 3) the gene(s) of origin corresponding to the 
+                        sequence(s). This .tsv can then be analyzed by ProteoformClassifier.
                     </TextBlock>
 
                     <!--Settings-->
@@ -378,7 +387,8 @@ spectrum match (PrSM) and outputs a summary for all identifications.
                         This workflow assigns a proteoform-level classification for each of your proteoform-spectrum matches. 
                         Analyze your data with your favorite proteoform identification software. 
                         Prepare the results from your software as a .tsv containing three columns: 
-                        1) the scan number of the PrSM, 2) the proteoform sequence(s) identified for that scan, and 3) the gene(s) corresponding those sequence(s).
+                        1) the scan number of the PrSM, 2) the proteoform sequence(s) identified for that scan, and 3) the gene(s) of origin corresponding to the sequence(s). This .tsv can then be analyzed 
+                        by ProteoformClassifier.
                     </TextBlock>
 
                     <!--Settings-->
