--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -173,7 +173,7 @@
                                                 <LineBreak />
 
                         <LineBreak /> <TabItem Visibility="Hidden"/> 
-                        ● <Bold FontWeight="UltraBold">Validate Input:</Bold> <TabItem Visibility="Hidden"/> Validate that your proteoform identification software produces output that is transparent about ambiguity.                       
+                        ● <Bold FontWeight="UltraBold">Validate Software:</Bold> <TabItem Visibility="Hidden"/> Validate that your proteoform identification software produces output that is transparent about ambiguity.                       
                         <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
                         If the output is not transparent, then this program is unable to accurately classify proteoform identifications.  
                         <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
@@ -219,7 +219,7 @@
             </TabItem>
 
             <!--Validate tab-->
-            <TabItem Name="ValidateTab" Header="Validate Input" TabIndex="0" Style="{StaticResource TabItemStyle}">
+            <TabItem Name="ValidateTab" Header="Validate Software" TabIndex="0" Style="{StaticResource TabItemStyle}">
                 <Grid Style="{StaticResource PageGridStyle}">
                     <Grid.RowDefinitions>
                           <RowDefinition Height="50"/>
@@ -232,7 +232,7 @@
                     </Grid.RowDefinitions>
 
                     <!--Header label-->
-                    <Label Content="Validate Input" Grid.Row="0" Style="{StaticResource HeaderLabelStyle}" />
+                    <Label Content="Validate Software" Grid.Row="0" Style="{StaticResource HeaderLabelStyle}" />
 
                     <!--Detail text-->
                     <TextBlock Grid.Row="1" Style="{StaticResource TextBlockStyle}">
