--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:GUI"
         mc:Ignorable="d"
         Drop="Window_Drop" AllowDrop="true" Background="{StaticResource BackgroundColor}" WindowStartupLocation="CenterScreen" MinHeight="400" 
-        MinWidth="800" Height="600" Width="1050">
+        MinWidth="800" Height="625" Width="1050">
 
     <Window.Resources>
         <ResourceDictionary>
@@ -174,27 +174,27 @@
 
                         <LineBreak /> <TabItem Visibility="Hidden"/> 
                         ● <Bold FontWeight="UltraBold">Validate Software:</Bold> <TabItem Visibility="Hidden"/> Validate that your proteoform identification software produces output that is transparent about ambiguity.                       
-                        <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
+                        <LineBreak /><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
                         If the output is not transparent, then this program is unable to accurately classify proteoform identifications.  
-                        <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
+                        <LineBreak /><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
                         To validate your software output, use your proteoform identification software to analyze 
                         <Hyperlink NavigateUri="https://github.com/smith-chem-wisc/ProteoformClassifier/tree/main/Test/ValidationFiles" RequestNavigate="Hyperlink_RequestNavigate">              
                         the prepared .mzML
                         </Hyperlink> 
-                        <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
+                        <LineBreak /><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
 <Hyperlink NavigateUri="https://github.com/smith-chem-wisc/ProteoformClassifier/tree/main/Test/ValidationFiles" RequestNavigate="Hyperlink_RequestNavigate">                               
                         (Validation.mzML) and .fasta (Validation.fasta).
                         </Hyperlink>  
                         Convert your proteoform results into a three-column .tsv with  
-                        <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
-                        columns of scan numbers, proteoform sequences, and genes. Separate multiple items within a single column with '|'.
-                        <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
-                            You can then analyze this .tsv with ProteoformClassifier.
+                        <LineBreak /><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
+                        columns of scan numbers, proteoform sequences, and genes. Separate multiple items within a single column 
+                        <LineBreak /><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
+                        with '|'. You can then analyze this .tsv with ProteoformClassifier.
                         <LineBreak />
                         
                         <LineBreak /> <TabItem Visibility="Hidden"/> 
-                        ● <Bold FontWeight="UltraBold">Classify PrSMs:</Bold> <TabItem Visibility="Hidden"/>Classify your proteoform identifications. This program assigns a classification level for each proteoform-spectrum                  
-                        <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
+                        ● <Bold FontWeight="UltraBold">Classify PrSMs:</Bold> <TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/>Classify your proteoform identifications. This program assigns a classification level for each proteoform-spectrum                  
+                        <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
  match (PrSM) and outputs a summary for all identifications. The input file for classification is similar to validation.
                         <LineBreak /><TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> <TabItem Visibility="Hidden"/> 
                         
@@ -554,7 +554,7 @@
             <StackPanel Grid.Column="1" Background="{StaticResource BackgroundColor}" Margin="1,0,0,0">
                 <TextBlock>Output Terminal:</TextBlock>
                 <RichTextBox x:Name="notificationsTextBox" VerticalScrollBarVisibility="Visible" IsReadOnly="True" 
-                                 Background="Transparent" Foreground="{StaticResource TextColor1}" Height="100" BorderThickness="1" FlowDirection="LeftToRight">
+                                 Background="Transparent" Foreground="{StaticResource TextColor1}" Height="150" BorderThickness="1" FlowDirection="LeftToRight">
                     <RichTextBox.Resources>
                         <Style TargetType="{x:Type Paragraph}">
                             <Setter Property="Margin" Value="0" />
